--- a/registro.html
+++ b/registro.html
@@ -7,9 +7,9 @@
         <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
         <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-        <script>
+        <!-- <script>
             THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'
-        </script>
+        </script> -->
     </head>
 
     <body style="margin: 0; overflow: hidden;">
@@ -34,9 +34,11 @@
                     scale="5 5 5"
                 ></a-entity>
 
-                <a-camera gps-camera rotation-reader position="0 0 20"></a-camera>
+                <a-camera gps-camera rotation-reader camera="" position="0 0 20" rotation=""></a-camera>
+                <!-- <a-camera gps-camera rotation-reader position="0 0 20" material scale geometry position></a-camera> -->
         </a-scene>
     </body>
 </html>
 
+<!-- gps-entity-place="latitude: ; longitude: ;" -->
 <!-- position='190 0 10' / position='ubicación altura distancia' -->
