--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="5 5 5"
-                    gps-entity-place="latitude: 2.486700; longitude: -75.730460;"
+                    position="0 0 20"
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
@@ -36,4 +36,4 @@
     </body>
 </html>
 
-<!-- position='190 0 10' / position='ubicación altura distancia' -->
+<!-- position="0 0 20" / position='ubicación altura distancia' -->
